creo que he oslucionado los problemas. Estaban el el BiasImage.astro porque no estaba mandando las properties de manera correcta. Tengo que encontrar una forma de construir un componente reutilizable para las covers de todas las collections

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -179,5 +179,7 @@
   .logo-about_path {
     @apply text-mr-neon-blue
   }
- 
+  .for-covers {
+    @apply inline-block aspect-video w-full h-full overflow-hidden object-cover object-center rounded-lg
+  }
 }
